tests/snapshots/conformance__y_array_ending_with_newline.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["a"]
stdout --- 
["a"]
stderr --- 
<empty>
