tests/snapshots/conformance__y_array_with_1_and_newline.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1
]
stdout --- 
[1]
stderr --- 
<empty>
