tests/snapshots/conformance__y_array_with_several_null.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1,null,null,null,2]
stdout --- 
[1, null, null, null, 2]
stderr --- 
<empty>
