tests/snapshots/conformance__y_array_with_trailing_space.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[2] 
stdout --- 
[2]
stderr --- 
<empty>
