tests/snapshots/conformance__y_number.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[123e65]
stdout --- 
[123e65]
stderr --- 
<empty>
