tests/snapshots/conformance__y_number_0e1.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[0e1]
stdout --- 
[0e1]
stderr --- 
<empty>
